--- a/app/web/templates/layout.html
+++ b/app/web/templates/layout.html
@@ -1,10 +1,11 @@
 <!doctype html>
 
 <head>
-    <title>{% block title %}{% endblock %}KanaLearn</title>
+    <title>{% block title %}{% endblock %}Japanese Learning Hub</title>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/variables.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+    <link rel="icon" type="image/x-icon" href="/img/temple.svg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link
             rel="stylesheet"
